fix the issue with mobile version, add z-index to swipe btn

--- a/src/css/main-section.css
+++ b/src/css/main-section.css
@@ -7,9 +7,13 @@
     display: inline-block;
     width: 180px;
     height: 256px;
-    margin-bottom: 14px;
 }
 
+       /* main section common styles *****************/
+
+.main-section{
+  margin-top: 40px;
+}
 
        /*all books  **********************************/
 .book-card {
@@ -53,6 +57,7 @@
       display: flex;
       flex-direction: column; */
       width: 180px;
+      padding: 10px;
     }
     
 .book-title {
@@ -61,7 +66,7 @@
       line-height: 110%;
       letter-spacing: 0.04em;
       color:rgba(17, 17, 17, 1);
-      margin-bottom: 4px;
+      
     }
     
 .book-author {
